# autoclick

./: .coverage  .gitignore  .travis.yml  CHANGES  CHANGES.md  Makefile  README.md  pyproject.toml  requirements-test.txt
autoclick/: __init__.py  commands.py  composites.py  core.py  parameters.py  types.py  utils.py  validations.py
autoclick/composites/: __init__.py  library.py
autoclick/types/: __init__.py  library.py
autoclick/validations/: __init__.py  library.py
cli_spec/: README.md  cl_spec.md  cli_spec.cue
docs/source/: conf.py  index.md
tests/: test_autoclick.py
