[tool.poetry]
name = "autoclick"
version = "0.2.3"
description = "Auto-generate Click-based CLIs from python3 type annotations."
license = "MIT"
authors = ["John Didion <github@didion.net>"]
readme = "README.md"
homepage = "https://github.com/jdidion/autoclick"
repository = "https://github.com/jdidion/autoclick.git"
classifiers = ["Development Status :: 4 - Beta"]
include = ["CHANGES.md"]

[tool.poetry.dependencies]
python = "^3.6"
click = "7.0+"
docparse = "*"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
